2024-10-08   Luigi Scarso <luigi.scarso@gmail.com>
	* Fixed a typo in the svg backend that was confusing the draw attributes --
	see metapost ml  Missing stroke-linejoin attribute in SVG output for filldraw command
	(thanks to joshua@kraemer.link).

2024-05-19   Luigi Scarso <luigi.scarso@gmail.com>
        * Sync with https://github.com/ascherer/mplibdir commit c21f82c1990d1cdb86f51a00b5c81d0088e12454.

2024-05-18   Luigi Scarso <luigi.scarso@gmail.com>
        * Several patches for CWEB from Andreas Scherer

2024-05-01   Luigi Scarso <luigi.scarso@gmail.com>
        * Fixed Update |arc| and |t_tot| after |do_arc_test| has just returned |t| 
          in mp_get_arc_time

2024-03-18  Luigi Scarso <luigi.scarso@gmail.com>
	* Fixed a bug in n_arg for double and binary mode, 
          where -0.0 was  different form 0.0. 
          Work in progress for the  interval mode.

2024-02-16  Luigi Scarso <luigi.scarso@gmail.com>
	*  Updated manual. MetaPost 2.1

2024-02-12  Luigi Scarso <luigi.scarso@gmail.com>
	*  Fixed "warning: strncat specified bound 1 equals source length [-Wstringop-overflow=]" in mpxout.w

2024-01-28  Luigi Scarso <luigi.scarso@gmail.com>
  	*  Merge branch mpfi.
	
2024-01-26 Luigi Scarso <luigi.scarso@gmail.com>
	* Interval arithmetic: Added  source/libs/mpfi/TLpatches and source/libs/mpfi/m4

2024-01-03 Luigi Scarso <luigi.scarso@gmail.com>
	* Interval arithmetic: Fixed "++" and "+-+" by replacing a*a with sqr(a). Better error message for square root of negative numbers.

2024-01-02 Luigi Scarso <luigi.scarso@gmail.com>
	*  Interval arithmetic: fixed negate for mpfi.

2023-12-31 Luigi Scarso <luigi.scarso@gmail.com>
	* Interval arithmetic: fixed check interval for square root

2023-12-30 Luigi Scarso <luigi.scarso@gmail.com>
	* Interval arithmetic: Fixed allocation of the buffer for the file extension.
	* Interval arithmetic: Fixed position of verbatim_written in mpxout.w

2023-09-17  Luigi Scarso <luigi.scarso@gmail.com>